Shard server mongod initialization is not run after File Copy Based Initial Sync

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.0.0-rc6, 6.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v6.0
    • Hide

      fcbis-sharding-bug.patch
      ./buildscripts/resmoke.py run --storageEngine=wiredTiger --storageEngineCacheSizeGB=.50 --suite=sharding jstests/sharding/fcbis-sharding.js --log=file
      Need to have built with enterprise support for FCBIS.

      Show
      fcbis-sharding-bug.patch ./buildscripts/resmoke.py run --storageEngine=wiredTiger --storageEngineCacheSizeGB=.50 --suite=sharding jstests/sharding/fcbis-sharding.js --log=file Need to have built with enterprise support for FCBIS.
    • Sharding EMEA 2022-04-18, Sharding EMEA 2022-05-02, Sharding EMEA 2022-05-16
    • 124
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      initializeGlobalShardingStateForMongoD has to be run on shardsvrs during initialization. Currently, this is triggered from the following places:
      1) In initAndListen
      2) In ShardServerOpObserver::onInserts when an insert of the shard identity document is observed.

      For FCBIS however, this does not work: On a new member that will undergo initial sync, point (1) will not find the shard identity document at all. Later, point (2) will not be triggered because FCBIS does not perform inserts like logical initial sync would.
      As a result, after FCBIS has completed, the shard is left with uninitialized sharding state.

        1. fcbis-sharding-bug.patch
          2 kB
          Jordi Serra Torrens

            Assignee:
            Sergi Mateo Bellido
            Reporter:
            Jordi Serra Torrens
            Votes:
            0 Vote for this issue
            Watchers:
            13 Start watching this issue

              Created:
              Updated:
              Resolved: