SERVER-64601 Using the onInitialDataAvailable hook to initialize sharding environment